7. Decor elements - Fix padding & align for header elements.

--- a/css/style.css
+++ b/css/style.css
@@ -104,15 +104,27 @@ a {
   background-color: var(--basic-darkgrey);
 }
 
+.short-description,
+.contacts-address {
+  margin: 0;
+}
+
 .short-description {
   font-size: 16px;
   line-height: 23px;
   font-style: italic;
   color: var(--basic-red);
+  margin-left: 30px;
 }
 
 .contacts-phone-block {
   border: 2px var(--white) solid;
+  min-width: 270px;
+  min-height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
 }
 
 .contacts-phone-link {
@@ -136,6 +148,7 @@ a {
   font-size: 18px;
   line-height: 24px;
   background-color: var(--basic-grey);
+  margin-bottom: 60px;
 }
 
 .path-list {
@@ -448,11 +461,21 @@ a {
   background-color: var(--white);
   display: block;
   padding: 12px 24px;
+  min-width: 150px;
+  box-sizing: border-box;
 }
 
 .site-navigation-link,
 .footer-site-navigation-link {
   color: var(--white);
+}
+
+.site-navigation-link {
+  display: block;
+  padding-top: 16px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .catalog-list-link,
@@ -475,10 +498,21 @@ a {
   position: relative;
   color: var(--white);
   background-color: var(--basic-red);
+  display: flex;
+  min-width: 220px;
+  height: 42px;
+  justify-content: center;
+  align-items: center;
 }
 
 .order-button {
   color: inherit;
+  display: flex;
+  min-height: 100%;
+  justify-content: center;
+  align-items: center;
+  min-width: 150px;
+  box-sizing: border-box;
 }
 
 .favorites-button,
@@ -487,17 +521,20 @@ a {
   padding-left: 30px;
 }
 
-.bucket-button {
+.bucket-button-active {
   background-color: var(--basic-red);
 }
 
 .enter-button {
   position: relative;
   padding-left: 40px;
+  min-width: 120px;
+  box-sizing: border-box;
 }
 
 
-.favorites-button::before {
+.favorites-button::before,
+.bucket-button::before {
   position: absolute;
   content: "";
   width: 14px;
@@ -505,22 +542,15 @@ a {
   background-image: url("../img/icon-bookmark.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
-  left: 5px;
-  top: 1px;
+  left: 27px;
+  top: 12px;
   opacity: 0.3;
 }
 
 .bucket-button::before {
-  position: absolute;
-  content: "";
   width: 15px;
   height: 15px;
   background-image: url("../img/icon-cart.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  left: 5px;
-  top: 1px;
-  opacity: 0.3;
 }
 
 .enter-button::before {
@@ -665,6 +695,11 @@ a {
   color: var(--basic-grey);
 }
 
+.contacts-address-upper {
+  text-align: center;
+  margin-top: 3px;
+}
+
 .price-button {
   background-image: url("../img/red-button.svg");
   background-repeat: no-repeat;
@@ -776,18 +811,18 @@ a {
   margin-left: auto;
 }
 
-.short-description,
-.contacts-address {
-  margin: 0;
-}
-
-.contacts-phone-block {
-  text-align: center;
-}
-
 .middle-row .container {
   display: flex;
   justify-content: space-between;
+}
+
+.middle-row {
+  padding-top: 44px;
+  padding-bottom: 40px;
+}
+
+.call-icon {
+  margin-right: 16px;
 }
 
 .authentication-menu {
@@ -803,6 +838,7 @@ a {
 .site-navigation__list-item,
 .catalog__list-item {
   flex-grow: 1;
+  text-align: center;
 }
 
 .pre-footer {
@@ -816,6 +852,10 @@ a {
 
 .contacts-section {
   flex-basis: 300px;
+}
+
+.upper-contacts-section {
+  margin-left: 48px;
 }
 
 .catalog-list {
@@ -842,6 +882,7 @@ a {
 
 .user-name {
   flex-basis: 300px;
+  margin-left: -15px;
 }
 
 .catalog {
@@ -929,9 +970,12 @@ a {
 }
 
 .search__input {
-  padding-left: 30px;
   color: inherit;
   background-color: inherit;
+  border: none;
+  outline: none;
+  padding: 10px;
+  padding-left: 42px;
 }
 
 .search {
@@ -941,8 +985,8 @@ a {
 .search__icon {
   opacity: 0.3;
   position: absolute;
-  left: 10px;
-  top: 5px;
+  left: 17px;
+  top: 11px;
 }
 
 .user-block {
@@ -1001,6 +1045,7 @@ a {
   width: 620px;
   height: 282px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+  position: relative;
   margin: 0 auto;
   background-color: white;
 }
@@ -1054,10 +1099,10 @@ a {
 .upper-logo::after {
   content: "";
   position: absolute;
-  width: 110px;
+  width: 220px;
   height: 5px;
   background-color: #BA2732;
-  top: 25px;
+  top: 42px;
   left: 0;
 }
 
